# Brand_Guardian_LLMOPS

./: README.md
ComplianceQAPipeline/: main.py  pyproject.toml  test.py
ComplianceQAPipeline/backend/scripts/: index_documents.py
ComplianceQAPipeline/backend/src/api/: server.py  telemetry.py
ComplianceQAPipeline/backend/src/graph/: nodes.py  state.py  workflow.py
ComplianceQAPipeline/backend/src/services/: video_indexer.py
